added index.html content and css styling

--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Salmon Cookies</title>
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Rammetto+One" rel="stylesheet">
 </head>
 <body>
-  
+  <header>Salmon Cookies</header>
+  <img id='salmonLogo' src="img/salmon.png" alt="Salmon Cookies logo">
+  <div>
+    <h2>Hours of Operations</h2>
+    <p>Open daily from 6am - 8pm</p>
+  </div>
+  <div>
+    <h2>Locations</h2>
+    <ul>
+      <li>1st and Pike</li>
+      <li>SeaTac Aiport</li>
+      <li>Seatte Center</li>
+      <li>Capitol Hill</li>
+      <li>Alki </li>
+    </ul>
+  </div>
 </body>
 </html>
