finishing touches to monday's features

--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
 <body>
   <header>Salmon Cookies</header>
   <img id='salmonLogo' src="img/salmon.png" alt="Salmon Cookies logo">
-  <div>
+  <section>
     <h2>Hours of Operations</h2>
     <p>Open daily from 6am - 8pm</p>
+  </section>
+  <section>
+    <h2>About Us</h2>
+    <p>We make cookies out of fish.</p>
   </div>
-  <div>
+  <section>
     <h2>Locations</h2>
     <ul>
       <li>1st and Pike</li>
@@ -25,6 +29,6 @@
       <li>Capitol Hill</li>
       <li>Alki </li>
     </ul>
-  </div>
+  </section>
 </body>
 </html>
