--- a/sales.html
+++ b/sales.html
@@ -7,24 +7,36 @@
 
     <body>
 
-        <main>
+        <main> 
 
-            
-          <strong>1st and Pike</strong>
+        <div>  
+            <strong>1st and Pike</strong>
             <ul id="avgSalesPike"></ul>
+        </div>
 
+        <div>
             <strong>SeaTac Airport</strong>
             <ul id="avgSeaTacSales"></ul>
+        </div>
 
+        <div>
             <strong>Seattle Center</strong>
-          <ul id = 'avgSeattleCenterSales'></ul>
-          <strong>Capitol Hill</strong>
-          <ul id = 'avgCapHillSales'></ul>
-          <strong>Alki</strong>
-          <ul id = 'avgAlkiSales'></ul>
+            <ul id = 'avgSeattleCenterSales'></ul>
+        </div>
+
+        <div>
+            <strong>Capitol Hill</strong>
+            <ul id = 'avgCapHillSales'></ul>
+        </div>
+
+        <div>
+            <strong>Alki</strong>
+            <ul id = 'avgAlkiSales'></ul>
+        </div>  
+
         </main>
         <script src="js/app.js"></script>
-        
+        <table>Sales per Store</table>
     </body>
 
 </html>
