created working table

--- a/sales.html
+++ b/sales.html
@@ -33,10 +33,11 @@
             <strong>Alki</strong>
             <ul id = 'avgAlkiSales'></ul>
         </div>  
-
+        <h2>Cookie Sales per location</h2>
+        <table id='tableCookieSales'></table>
         </main>
         <script src="js/app.js"></script>
-        <table>Sales per Store</table>
+
     </body>
 
 </html>
