--- a/sales.html
+++ b/sales.html
@@ -2,39 +2,17 @@
 <html>
     <head>
         <title>Salmon Cookie Sales</title>
-        
+        <link href="css/reset.css" rel="reset stylesheet"/>
+        <link href="css/style.css" rel="stylesheet"/>
     </head>
 
     <body>
 
         <main> 
 
-        <div>  
-            <strong>1st and Pike</strong>
-            <ul id="avgSalesPike"></ul>
-        </div>
+            <h2 id='tableH'>Cookie Sales per location</h2>
+            <table id='tableCookieSales'></table>
 
-        <div>
-            <strong>SeaTac Airport</strong>
-            <ul id="avgSeaTacSales"></ul>
-        </div>
-
-        <div>
-            <strong>Seattle Center</strong>
-            <ul id = 'avgSeattleCenterSales'></ul>
-        </div>
-
-        <div>
-            <strong>Capitol Hill</strong>
-            <ul id = 'avgCapHillSales'></ul>
-        </div>
-
-        <div>
-            <strong>Alki</strong>
-            <ul id = 'avgAlkiSales'></ul>
-        </div>  
-        <h2>Cookie Sales per location</h2>
-        <table id='tableCookieSales'></table>
         </main>
         <script src="js/app.js"></script>
 
