--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <body>
   <header>Salmon Cookies</header>
   <img id='salmonLogo' src="img/salmon.png" alt="Salmon Cookies logo">
-  <section>
+  <div>
     <h2>Hours of Operations</h2>
     <p>Open daily from 6am - 8pm</p>
-  </section>
+  </div>
   <section>
     <h2>About Us</h2>
     <p>We make cookies out of fish.</p>
-  </div>
+  </section>
   <section>
     <h2>Locations</h2>
     <ul>
