Changed header rows to be th instead of td to allow for easier styling

--- a/sales.html
+++ b/sales.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html id = 'salesPage'>
     <head>
         <title>Salmon Cookie Sales</title>
         <link href="css/reset.css" rel="reset stylesheet"/>
