--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         
         <img class= "inLinePic" src="img/frosted-cookie.jpg"  alt="A frosted Salmon cookie">
         
-       Morris destroyed all of Pat's research. Her beakers were shattered, her salmon specimen were ripped appart, and even her food supply was targetted.  When Pat submitted her report to National Park Service, the junior forester, Tom Parr, took a special interest. He couldn't recover any of her research but he was able to recover some bits and peices of her Salmon specimen and food supply. <img class= "inLinePic" src="cutter.jpg" alt="a salmon cookie cutter">
+       Morris destroyed all of Pat's research. Her beakers were shattered, her salmon specimen were ripped appart, and even her food supply was targetted.  When Pat submitted her report to National Park Service, the junior forester, Tom Parr, took a special interest. He couldn't recover any of her research but he was able to recover some bits and peices of her Salmon specimen and food supply. 
         Sarcastically, Pat replied "What am I going to do with this? Bake cookies?" She was so driven by her sarcasm that she actually ended up making cookies. Tom loved them and shared the sarcasticookies with the other foresters. 
         Pat's Salmon Cookies were loved by the mountain men and women and were requested over an over until Pat gave up on her dream of being the world's best limnin endocrinologist in favor of opening up her first cookie store.
         Pat and Tom were married less than a year later and the cookies warranted 4 additional Salmon cookie stores. They now employ their children as free labor. 
@@ -66,14 +66,15 @@
         <h2 id= merchandiseHeader>
           Merchandise</h2>
         <figure>
-            <img src="img/shirt.jpg" alt="Pat's Salmon Cookie shirt"/>
+            <img class= "inLinePic" src="img/shirt.jpg" alt="Pat's Salmon Cookie shirt"/>
             <figcaption>scratch'n sniff salmon shirt $19.95 +s&h</figcaption>
         </figure>
-             <figure> <img class= "inLinePic" src="img/fish.jpg" alt="fish"><figcaption>double-sided, razor-sharp souvenir cookie cutter $55.55</figcaption></figure>
+             <figure> <img class= "inLinePic" src="img/cutter.jpg" alt="a salmon cookie cutter"><figcaption>double-sided, razor-sharp souvenir cookie cutter $55.55</figcaption></figure>
+        <figure><img class= "inLinePic" src="img/fish.jpg" alt="fish"><figcaption>Original painting by Roe Soloman-Parr $800</figcaption></figure>
     </div>
   </section>
   <section class = "bottomBar">
-    <header>Join the team</header>
+    <header id = "joinTeam" >Join the team</header>
     <figure>
       <img src="img/chinook.jpg" alt="a Chinook Salmon">
     </figure>
