linked sales.html

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </div>
   </section>
   <section class = "bottomBar">
-    <header id = "joinTeam" >Join the team</header>
+    <header id = "Sales Page" ><a href="sales.html">Sales Page</a> </header>
     <figure>
       <img src="img/chinook.jpg" alt="a Chinook Salmon">
     </figure>
